fix bug that left white space at bottom of index page

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -6,6 +6,7 @@ header {
     background-position: center center;
     background-repeat: none;
     background-size: cover;
+    margin-top:50px;
     .intro-text {
         padding-top: 100px;
         padding-bottom: 50px;
